comprobante de prestamo

--- a/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
@@ -5,10 +5,8 @@
 <!--<body onload="javascript:window.print();window.close();">-->
 
 <!-- LO QUE ESTA COMENTADO ES COMO ESTA ANTES!!!!!!! -->
-
-
-
-<table width="100%" border="1px">
+<div id="ticket">
+  <table id="table_prest" width="100%" border="1px">
   <tbody>
     <tr>
 	<td colspan="2" align="center">
@@ -169,7 +167,7 @@
     </tr>
   </tbody>
 </table>
-
+</div>
 <!-- AGREGADO HASTA ACA -->
 
 <!--<br><br><br>
