--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -297,7 +297,7 @@ $(document).ready(function(){
 	USUARIO.text    = "[% socio_modificar.persona.getApeYNom %]";
     USUARIO.ID      = '[% socio_modificar.getNro_socio %]';
 	detalleUsuario();
-  
+
 //     $('#fancybox_ticket').modal({   containerCss:{
 //             backgroundColor:"#fff",
 //     //         borderColor:"#0063dc",
@@ -358,7 +358,7 @@ $(document).ready(function(){
             <div id="historialSanciones" class="toggle_container_block" style="display:none"></div>
         </fieldset>
     </div>
-    <div class="fancybox_ticket" id="fancybox_ticket"></div> 
+    <div class="ticket" id="ticket"></div> 
 </div>
 
 [% INCLUDE "intranet-bottom.inc" %]
