--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -358,7 +358,7 @@ $(document).ready(function(){
             <div id="historialSanciones" class="toggle_container_block" style="display:none"></div>
         </fieldset>
     </div>
-    <div class="ticket" id="ticket"></div> 
+   <!-- <div class="ticket" id="ticket"></div> -->
 </div>
 
 [% INCLUDE "intranet-bottom.inc" %]
