impresion de comprobante de prestamo

--- a/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
@@ -1,29 +1,11 @@
-<!--<html>
+<html>
 <head>
   <meta http-equiv="Content-Tipo" content="text/html; charset=UTF-8">
-</head>-->
-<!--<body onload="javascript:window.print();window.close();">-->
+</head>
+<body onload="javascript:window.print();window.close();">
 
-<script type="text/javascript">
-  
-// $('#ticket').window.print();window.close();
-// $(document).ready(function(){
-//        $('#ticket').ajaxStop(function() {
-//             $('#ticket').modal({   containerCss:{
-//                   backgroundColor:"#fff",
-//           //         borderColor:"#0063dc",
-//                   height:420,
-//                   padding:0,
-//                   width:650,
-//                   
-//               },
-//         });
-//     });
-// 
-//   });
-</script>
-<!-- LO QUE ESTA COMENTADO ES COMO ESTA ANTES!!!!!!! -->
-<div id="ticket">
+<!--LO QUE ESTA COMENTADO ES COMO ESTA ANTES!!!!!!! -->
+
   <table id="table_prest" width="100%" border="1px">
   <tbody>
     <tr>
@@ -185,7 +167,7 @@
     </tr>
   </tbody>
 </table>
-</div>
+
 <!-- AGREGADO HASTA ACA -->
 
 <!--<br><br><br>
@@ -203,5 +185,5 @@
     </td>
   </tr>
 </table>-->
-<!--</body>
-</html>-->
+</body>
+</html>
