impresion de comprobante prestamo

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="/includes/jquery/jquery.fileUploader-min.js"></script>
 <script type="text/javascript" src="/includes/jquery/jquery.livequery-min.js"></script>
 <script type="text/javascript" src="/includes/jquery/fancybox/jquery.fancybox.js"></script>
-
+<script type="text/javascript" src="/includes/jquery/jquery.popUpWindows.js"></script>
 
 [% INCLUDE "WindowHelper.inc" %] 
 [% INCLUDE "ChangePasswordHelper.inc"  %]
@@ -358,7 +358,7 @@ $(document).ready(function(){
             <div id="historialSanciones" class="toggle_container_block" style="display:none"></div>
         </fieldset>
     </div>
-    <div class="modal" id="ticket"></div> 
+    <a class="link_ticket" id="link_ticket">hola</a>
 </div>
 
 [% INCLUDE "intranet-bottom.inc" %]
