--- a/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
@@ -1,28 +1,28 @@
-<html>
+<!--<html>
 <head>
   <meta http-equiv="Content-Tipo" content="text/html; charset=UTF-8">
 </head>
-<body onload="javascript:window.print();window.close();">
+<body onload="javascript:window.print();window.close();">-->
 
 <!--LO QUE ESTA COMENTADO ES COMO ESTA ANTES!!!!!!! -->
 
-  <table id="table_prest" width="100%" border="1px">
+  <table id="table_prest" >
   <tbody>
     <tr>
-	<td colspan="2" align="center">
-		<b>PR&Eacute;STAMO - RENOVACI&Oacute;N</b>
-	</td>
-    </tr>
-        <tr>
-      	<TD align="left" width="50%">
-        	C&oacute;digo de barras:
-      	</TD>
-      	<td>
-        	<h3><b>[% prestamo.nivel3.getBarcode %]</b></h3>
-      	</td>
+          <td colspan="2" align="center">
+              <p>PR&Eacute;STAMO - RENOVACI&Oacute;N</p>
+          </td>
     </tr>
     <tr>
-    	<TD align="left" width="50%">
+      	<TD align="left" width="30%">
+        	C&oacute;digo de barras:
+      	</TD>
+    <td>
+        	<h3><b>[% prestamo.nivel3.getBarcode %]</b></h3>
+    </td>
+    </tr>
+    <tr>
+    	<TD align="left" width="30%">
         	Usuario:
       	</TD>
       	<td>
@@ -34,7 +34,7 @@
       	</td>
     </tr>
     <tr>
-    	<TD align="left" width="50%">
+    	<TD align="left" width="30%">
         	Documento:
       	</TD>
       	<td>
@@ -48,7 +48,7 @@
       	</td>
     </tr>
     <tr>
-      	<td align="left" width="50%">
+      	<td align="left" width="30%">
         	Fecha de pr&eacute;stamo: 
       	</td>
       	<td>
@@ -56,7 +56,7 @@
       	</td>
     </tr>
     <tr>
-     	<td align="left" width="50%">
+     	<td align="left" width="30%">
         	Fecha de devoluci&oacute;n:
       	</td>
       <td>
@@ -64,7 +64,7 @@
       </td>
     </tr>
     <tr>
-    	<TD align="left" width="50%">
+    	<TD align="left" width="30%">
         	Tipo de pr&eacute;stamo:
       	</TD>
       	<td>
@@ -73,7 +73,7 @@
     </tr>
 
     <tr>
-      	<TD align="left" width="50%">
+      	<TD align="left" width="30%">
         	Autor:
       	</TD>
       	<td>
@@ -81,7 +81,7 @@
       	</td>
     </tr>
     <tr>
-	<TD align="left" width="50%">
+	<TD align="left" width="30%">
          	T&iacute;tulo:
   	</TD>
       	<td>
@@ -97,7 +97,7 @@
       </td>
     </tr>-->
      <tr>
-      	<TD align="left" width="50%">
+      	<TD align="left" width="30%">
         	Tomo:
       </TD>
       <td>
@@ -114,7 +114,7 @@
       	</td>
     </tr>-->
     <tr>
-      	<TD align="left" width="50%">
+      	<TD align="left" width="30%">
         	Responsable:<!-- del pr&eacute;stamo: -->
       	</TD>
       	<td>
@@ -122,7 +122,7 @@
       	</td>
     </tr>
     <tr>
-    	<td align="left" width="50%">
+    	<td align="left" width="30%">
       		Firma del usuario:
     	</td>
     	<td>
@@ -146,11 +146,11 @@
   <tbody>
     <tr>
 	<td colspan="2" align="center">
-		<b>DEVOLUCI&Oacute;N</b>
+		<p>DEVOLUCI&Oacute;N</p>
 	</td>
     </tr>
     <tr>
-      	<td align="left" width="50%">
+      	<td align="left" width="30%">
         	Fecha: 
       	</td>
       	<td>
@@ -158,7 +158,7 @@
       	</td>
     </tr>
     <tr>
-    	<td align="left" width="50%">
+    	<td align="left" width="30%">
       		Firma del responsable:
     	</td>
     	<td>
@@ -185,5 +185,5 @@
     </td>
   </tr>
 </table>-->
-</body>
-</html>
+<!--</body>
+</html>-->
