--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialSanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialSanciones.tmpl
@@ -1,7 +1,7 @@
 [% USE HTML %]
 
 [% IF cant %]
-		<div class="resultados_consulta">[% "Cantidad de registros en el hisotrial de sanciones" | i18n %]: &nbsp;[% cant %]</div> 
+		<div class="resultados_consulta">[% "Cantidad de registros en el historial de sanciones" | i18n %]: &nbsp;[% cant %]</div> 
 		<div class="contenedor_paginador">[% paginador %]</div>
 		<table class="tablaHistorialSanciones datos_tabla" cellspacing=0  cellpadding=0 border=0 width="100%">
 		    <tr class="titulo_tabla_resultado">
