--- a/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
@@ -6,25 +6,25 @@
 
 <!--LO QUE ESTA COMENTADO ES COMO ESTA ANTES!!!!!!! -->
 
-  <table id="table_prest" >
+<table>
   <tbody>
     <tr>
-          <td colspan="2" align="center">
-              <p>PR&Eacute;STAMO - RENOVACI&Oacute;N</p>
+          <td>
+              <p style="align:center;">PR&Eacute;STAMO - RENOVACI&Oacute;N</p>
           </td>
     </tr>
     <tr>
-      	<TD align="left" width="30%">
-        	C&oacute;digo de barras:
-      	</TD>
-    <td>
-        	<h3><b>[% prestamo.nivel3.getBarcode %]</b></h3>
-    </td>
+          <td>
+              C&oacute;digo de barras:
+          </td>
+          <td>
+              <h2>[% prestamo.nivel3.getBarcode %]</h2>
+          </td>
     </tr>
     <tr>
-    	<TD align="left" width="30%">
+    	<td>
         	Usuario:
-      	</TD>
+      	</td>
       	<td>
             [% IF adicional_selected == "true" %]
                 <b>[% socio.getNombre_apellido_autorizado %]</b>
@@ -34,9 +34,9 @@
       	</td>
     </tr>
     <tr>
-    	<TD align="left" width="30%">
+    	<td>
         	Documento:
-      	</TD>
+      	</td>
       	<td>
        		Tipo:<b>[% socio.persona.documento.getTipo_documento  %]</b> 
             N&uacute;mero:
@@ -48,42 +48,41 @@
       	</td>
     </tr>
     <tr>
-      	<td align="left" width="30%">
+      	<td>
         	Fecha de pr&eacute;stamo: 
       	</td>
       	<td>
-		<b> [% prestamo.getFecha_prestamo_formateada_ticket %]</b>
+            <b> [% prestamo.getFecha_prestamo_formateada_ticket %]</b>
       	</td>
     </tr>
     <tr>
-     	<td align="left" width="30%">
+     	<td>
         	Fecha de devoluci&oacute;n:
       	</td>
-      <td>
+        <td>
         	<b>[% prestamo.getFecha_vencimiento_formateada %]</b>
-      </td>
+        </td>
     </tr>
     <tr>
-    	<TD align="left" width="30%">
+    	<td>
         	Tipo de pr&eacute;stamo:
-      	</TD>
+      	</td>
       	<td>
         	<b>[% prestamo.tipo.getDescripcion %]</b>
       	</td>
     </tr>
-
     <tr>
-      	<TD align="left" width="30%">
+      	<td>
         	Autor:
-      	</TD>
+      	</td>
       	<td>
         	<b>[% prestamo.nivel3.nivel1.getAutor %]</b>
       	</td>
     </tr>
     <tr>
-	<TD align="left" width="30%">
+	<td>
          	T&iacute;tulo:
-  	</TD>
+  	</td>
       	<td>
         	<b>[% prestamo.nivel3.nivel1.getTitulo %]</b>
         </td>
@@ -97,12 +96,12 @@
       </td>
     </tr>-->
      <tr>
-      	<TD align="left" width="30%">
+      	<td>
         	Tomo:
-      </TD>
-      <td>
-        <b>[% IF prestamo.nivel3.nivel2.getVolumen %] [% prestamo.nivel3.nivel2.getVolumen %] [% ELSE %] - [% END %]</b>
-      </td>
+        </td>
+        <td>
+            <b>[% IF prestamo.nivel3.nivel2.getVolumen %] [% prestamo.nivel3.nivel2.getVolumen %] [% ELSE %] - [% END %]</b>
+        </td>
     </tr>
 
     <!--<tr>
@@ -114,15 +113,15 @@
       	</td>
     </tr>-->
     <tr>
-      	<TD align="left" width="30%">
+      	<td>
         	Responsable:<!-- del pr&eacute;stamo: -->
-      	</TD>
+      	</td>
       	<td>
         	<b>[% responsable.persona.getApeYNom %]</b>
       	</td>
     </tr>
     <tr>
-    	<td align="left" width="30%">
+    	<td>
       		Firma del usuario:
     	</td>
     	<td>
@@ -130,27 +129,23 @@
     	</td>
     </tr>
 <!-- NO ESTABA EN LA VERSION ANTERIOR -->
-    <tr>
-	<td colspan="2">
-		&nbsp;
-		<br>
-		&nbsp;
-		<br>
-		&nbsp;
-	</td>
-    </tr>
+       <tr>
+          <td>
+              <br>&nbsp;</br>
+          </td>
+      </tr>
   </tbody>
 </table>
 
-<table width="100%" border="1px">
-  <tbody>
+<table>
+  <tbody> 
     <tr>
-	<td colspan="2" align="center">
+	<td>
 		<p>DEVOLUCI&Oacute;N</p>
 	</td>
     </tr>
     <tr>
-      	<td align="left" width="30%">
+      	<td>
         	Fecha: 
       	</td>
       	<td>
@@ -158,7 +153,7 @@
       	</td>
     </tr>
     <tr>
-    	<td align="left" width="30%">
+    	<td>
       		Firma del responsable:
     	</td>
     	<td>
