--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaCampoVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaCampoVisualizacionIntra.tmpl
@@ -1,11 +1,13 @@
 <script type="text/javascript" language="javascript" src="/includes/jquery/jquery-ui-1.8.13.sortable.min.js"></script>
 <script type="text/javascript" language="javascript">
-    $(function() {
-	    $("#sortable").sortable({
+    $("#enable_sort_campo").change(function(){
+        if($(this).is(':checked')){
+            $("#sortable").sortable({
             stop: function(event, ui) {
                 actualizarOrdenCampo($('#sortable').sortable('toArray'));
             }
         });
+        }
     });
 </script>
 <script type="text/javascript" language="javascript">
@@ -33,6 +35,7 @@
                 </tr>
             </thead>
             <tbody id="sortable">
+                <input type="checkbox" name="enable_sort_campo" id="enable_sort_campo" /> Seleccione para Ordenar
                 [% FOREACH campo IN visualizacion %]
                     <tr id="[% campo.getId %]" align="center">
                         <td>[% campo.getCampo %]</td>
