Fix en circular desde detalle, ahora aparece la opcion de devolver si esta prestado - Fix en historial de prestamos en usuario, ahora se ordena por fecha de prestamo DESC

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -122,7 +122,7 @@
 						                <td valign="middle">
 						
 						                          [% IF disponible %]
-						                              [% IF paraPrestamo %]
+						                              [% IF prestamo.getNro_socio %]
 						                                  [% PERL %]
 						                                      print C4::AR::Filtros::to_Icon( 
 						                                          boton   =>  "icon_devolver",
