--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
@@ -4940,6 +4940,45 @@ a {
     margin: 0 auto;
 }
 
+
+
+/* ESTILO MODAL IMPRESION DE TICKETS DE PRESTAMO */
+
+
+.ticket{
+    padding-left: 8%;
+/*    border:1px solid #4B5869;*/
+}
+
+.ticket td{
+    padding-right: 20px;
+}
+
+.ticket p{
+    background-color:#4B5869;
+    text-align:center;
+    font-size:16px; 
+    font-weight:bold;
+}
+
+#comprob{
+    padding-bottom:5%;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*.mensaje_contacto h2{
     font-family: Arial;
     font-size: 14px;
