export pdf comprobantes prestamos

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -151,7 +151,7 @@ function updateInfoPrestarReserva(responseText){
   		setMessages(messageArray[i]);
 	}
 
-    imprimirTicket(ticketsArray)
+    imprimirTicket(ticketsArray);
 
 	detalleReservas(USUARIO.ID);
 	detallePrestamos(USUARIO.ID);
