--- a/intranet/htdocs/intranet-tmpl/reports/usuariosResult-export.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/usuariosResult-export.tmpl
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="[% temas %]/[% user_theme %]/includes/completo.css">
 
 <fieldset class="resultados_busqueda">
-<!--     <legend class="titulo_legend trigger click">[% "Resultados de la b&uacute;squeda" | i18n %]:</legend> -->
+     <legend class="titulo_legend trigger click">[% "Resultados de la b&uacute;squeda" | i18n %]:</legend> 
         <div class="datos_tabla_div" id="datos_tabla_div">
             <div class="resultados_consulta">[% "Total de registros" | i18n %]: [% HTML.escape(cantidad) %] </div>
             <div class="filtros_reporte">
