[CHANGELOG] Se agregaron las busquedas a servidores MERAN externos

--- a/opac/htdocs/opac-tmpl/includes/opac-structure.css
+++ b/opac/htdocs/opac-tmpl/includes/opac-structure.css
@@ -2925,3 +2925,9 @@ fieldset {
 .cover_detalle_container{
 	width: 25%;
 }
+
+.server_name {
+    font-size: 14px;
+    font-weight: bold;
+    width: 100%;
+}
