--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -1,10 +1,25 @@
 <link rel="stylesheet" type="text/css" href="[% temas %]/[% user_theme_intra %]/includes/fileuploader.css">
 
 <script type="text/javascript" src="/includes/jquery/fileuploader.js"></script>
+<script src="/includes/jquery/jquery.jeditable.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function(){
         makeToggle('toggle_container','trigger',null,true);
+
+        $('.nota').editable('[% url_prefix %]/usuarios/reales/usariosRealesDB.pl', { 
+              type      : 'textarea',
+              cancel    : CANCELAR,
+              submit    : OK,
+              tooltip   : EDITABLE_MSG,
+              placeholder: EDITABLE_MSG,
+              style   : 'display: inline',
+              submitdata : {token: "[% token %]", edit: '1'},
+              indicator : loaderPath,
+        });
+
+
+
     
         [% IF !foto_name %] 
             $('#div_uploader').show();
@@ -124,6 +139,18 @@
                 </ul>
             </div>
         </fieldset>
+
+        <fieldset>
+            <legend class="titulo_legend_resaltado trigger click titulo_legend" title='[% "click para acceder a las notas registradas sobre el usuario" | i18n %]'>
+                    [% "Notas" | i18n %]
+            </legend>
+            <div class="toggle_container" >
+                   <div class="nota">[% notas %]</div>
+            </div>
+        </fieldset>
+
+      
+
         </div>
 </div><!--columna izq -->
 
