[CHANGELOG] Ahora pueden guardarse notas sobre el usuario en datosUsuario

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -15,7 +15,7 @@ var loaderPath= "";
               tooltip   : EDITABLE_MSG,
               placeholder: EDITABLE_MSG,
               style   : 'display: inline',
-              submitdata : {token: "[% token %]", edit: '1', elemEdit: 'nota'},
+              submitdata : {token: "[% token %]", edit: '1', id: 'nota', nro_socio:'[% nro_socio %]' },
               indicator : loaderPath,
         });
 
